--- a/asp-net-core-todo/Views/Todo/Index.cshtml
+++ b/asp-net-core-todo/Views/Todo/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model TodoViewModel
+@using Humanizer
 
 @{
     ViewData["Title"] = "Manage your to-do list";
@@ -23,12 +24,12 @@
                     <input type="checkbox" class="done-checkbox">
                 </td>
                 <td>@item.Title</td>
-                <td>@item.DueAt</td>
+                <td>@item.DueAt.Humanize()</td>
             </tr>
         }
-        <table/>
+        <table />
 
         <div class="panel-footer add-item-form">
-            <!-- TODO: Add item form -->
+            @await Html.PartialAsync("AddItemPartial", new TodoItem())
         </div>
 </div>
