--- a/asp-net-core-todo/Views/Shared/_LoginPartial.cshtml
+++ b/asp-net-core-todo/Views/Shared/_LoginPartial.cshtml
@@ -1,7 +1,8 @@
 @using Microsoft.AspNetCore.Identity
+@using asp_net_core_todo.Models
 
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 
 @if (SignInManager.IsSignedIn(User))
 {
